--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-    <link rel="stylesheet" href="css/style.css.css"> 
+    <link rel="stylesheet" href="css/style.css"> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>ШУМОЗАВРЫ</h1>
-    <p><em>Группа</em> из Санкт-Петербурга <s>и Беларуси</s> города Орши</p>
+    <h1 class="title">ШУМОЗАВРЫ</h1>
+    <p class="justify"><em>Группа</em> из Санкт-Петербурга <s>и Беларуси</s> города Орши</p>
     <p>Играют в Стиле <br>РУССКИЙ РОК</br> альтернатива, неизвестные в узких кругах
     </p>
-    <h2>Релизы</h2>
+    <h2 class="relises">Релизы</h2>
     <ul>
         <li>Район</li>
         <li>Мальчик</li>
