--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+    <p>
+        <a href="about.html">О нас</a>
+    </p>
+
     <h1 class="title">ШУМОЗАВРЫ</h1>
     <p class="justify"><em>Группа</em> из Санкт-Петербурга <s>и Беларуси</s> города Орши</p>
     <p>Играют в Стиле <br>РУССКИЙ РОК</br> альтернатива, неизвестные в узких кругах
     </p>
     <h2 class="relises">Релизы</h2>
-    <ul>
+    <ul class="relises">
         <li>Район</li>
         <li>Мальчик</li>
         <li>Режим Полета</li>
