--- a/about.html
+++ b/about.html
@@ -6,6 +6,10 @@
     <title>о нас</title>
 </head>
 <body>
+    <p>
+        <a href="index.html">Главная</a>
+        
+    </p>
     <h1 class="title">О нас</h1>
     <p>Погружение в суровый инструментал, как падение в прорубь во время зимней рыбалки. 
         Это привычный для любого мужика в наших местах досуг. Напиться и сесть на лёд рыбу ловить. 
