--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <p>
-        <a href="about.html">О нас</a>
+        <a href="about.html" title="Переход на страницу о нас">О нас</a>
+        <a href="https://vk.com/shumozavri" target="_blank">VK</a>
+        <a href="tel:+79312651350">Звоните +79312651350</a>
+        <a href="mailto:shmzvr@gmail.com">shmzvr@gmail.com</a>
+    </p>
+    <p>
+        <img src="img/shmzvr.JPG" width="300" height="" alt="ШУМОЗАВРЫ" title="Дашка Фоткала">
+        <img src="https://sun9-38.userapi.com/c855636/v855636418/205d7d/HdqAwJKS9W0.jpg" width="300" height="" alt="ЧУВАК В ФУТБОЛКЕ">
+        <img src="https://sun9-41.userapi.com/c858520/v858520293/122881/vIhfxRrsQEc.jpg" width="300" height="" alt="" title="ДОБРОЛЕТ">
     </p>
 
     <h1 class="title">ШУМОЗАВРЫ</h1>
