--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <a href="mailto:shmzvr@gmail.com">shmzvr@gmail.com</a>
     </p>
     <p>
-        <img src="img/shmzvr.JPG" width="300" height="" alt="ШУМОЗАВРЫ" title="Дашка Фоткала">
+        <a href="img/shmzvr.JPG">
+            <img src="img/shmzvr.JPG" width="300" height="" alt="ШУМОЗАВРЫ" title="Дашка Фоткала">
+        </a>
         <img src="https://sun9-38.userapi.com/c855636/v855636418/205d7d/HdqAwJKS9W0.jpg" width="300" height="" alt="ЧУВАК В ФУТБОЛКЕ">
         <img src="https://sun9-41.userapi.com/c858520/v858520293/122881/vIhfxRrsQEc.jpg" width="300" height="" alt="" title="ДОБРОЛЕТ">
     </p>
@@ -35,5 +37,6 @@
         <li>Live on KEXP</li>
         <li>LIVE MOD</li>
     </ol>
+    <a href="files/shmzvr.rar" download>скачать фотку</a>
 </body>
 </html>
