--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1 class="title">ШУМОЗАВРЫ</h1>
     <p>
         <a href="about.html" title="Переход на страницу о нас">О нас</a>
         <a href="https://vk.com/shumozavri" target="_blank">VK</a>
@@ -21,9 +22,12 @@
         <img src="https://sun9-41.userapi.com/c858520/v858520293/122881/vIhfxRrsQEc.jpg" width="300" height="" alt="" title="ДОБРОЛЕТ">
     </p>
 
-    <h1 class="title">ШУМОЗАВРЫ</h1>
+    
     <p class="justify"><em>Группа</em> из Санкт-Петербурга <s>и Беларуси</s> города Орши</p>
     <p>Играют в Стиле <br>РУССКИЙ РОК</br> альтернатива, неизвестные в узких кругах
+    </p>
+    <p>
+        <a href="table.html" title="Переход на страницу таблицы">Таблицы</a>
     </p>
     <h2 class="relises">Релизы</h2>
     <ul class="relises">
