--- a/index.html
+++ b/index.html
@@ -42,5 +42,8 @@
         <li>LIVE MOD</li>
     </ol>
     <a href="files/shmzvr.rar" download>скачать фотку</a>
+    <p>
+        <a href="page.html" title="Переход на страницу страницы">Страница</a>
+    </p>
 </body>
 </html>
