--- a/table.html
+++ b/table.html
@@ -37,6 +37,8 @@
     </tr>
 </tfoot>
 </table>
-    
+<p>
+    <a href="index.html" title="возвращение Домой">главная</a>
+</p>    
 </body>
 </html>
