--- a/page.html
+++ b/page.html
@@ -11,20 +11,23 @@
         <h1 class="title">Релизы</h1>
         <p>
         <p>Меню</p>
-        <span class="text-red">
+        <div class="text-red">
             Погружение в суровый инструментал, как падение в прорубь во время зимней рыбалки.
-        </span>
+        </div>
             Это привычный для любого мужика в наших местах досуг. Напиться и сесть на лёд рыбу ловить. 
             А потом отправиться в свободное плавание со своей ненаглядной удочкой и термосом. 
             Так вот эта группа это что-то похожее на приключение моих земляков. 
             Пьяное скитание по ладам, перебор сыгранный и пропущенный через несколько педалей. 
-            Занудный и повторяющийся, как забрасывание наживки вокал. Главное не пойти под лёд, 
-            а то вот только устроишься удобно на маленькой раскладной табуреточке, войдёшь во вкус, а тут во те на те!
-            Тяжелённый камуфляжный бушлат тащит на дно, мужики кричат, а ты под музыку группы блажь идёшь на дно.</p>
+            <span class="text-red">Занудный и повторяющийся, как забрасывание наживки вокал.</span> 
+            Главное не пойти под лёд, а то вот только устроишься удобно на маленькой раскладной табуреточке, 
+            войдёшь во вкус, а тут во те на те! Тяжелённый камуфляжный бушлат тащит на дно,
+             мужики кричат, а ты под музыку группы блажь идёшь на дно.</p>
     </div>
     <div class="footer">
         <p>Copyright 2020</p>
     </div>
-
+    <p>
+        <a href="index.html" title="возвращение Домой">главная</a>
+    </p>   
 </body>
 </html>
