--- a/background.html
+++ b/background.html
@@ -23,6 +23,9 @@
             </p> 
         </div>
     </div>
-
+    <div class="gradient"></div>
+    <p>
+        <a href="index.html" title="возвращение Домой">главная</a>
+    </p>   
 </body>
 </html>
