--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <img src="https://sun9-38.userapi.com/c855636/v855636418/205d7d/HdqAwJKS9W0.jpg" width="300" height="" alt="ЧУВАК В ФУТБОЛКЕ">
         <img src="https://sun9-41.userapi.com/c858520/v858520293/122881/vIhfxRrsQEc.jpg" width="300" height="" alt="" title="ДОБРОЛЕТ">
     </p>
-
+    <p>
+        <a href="background.html" title="Доп.страница"> Кнопка Доп.страницы</a>
+    </p>   
     
     <p class="justify"><em>Группа</em> из Санкт-Петербурга <s>и Беларуси</s> города Орши</p>
     <p>Играют в Стиле <br>РУССКИЙ РОК</br> альтернатива, неизвестные в узких кругах
