--- a/form.html
+++ b/form.html
@@ -10,13 +10,18 @@
     <div class="form">  
         <h1 class="title">Формы</h1>
         <form action="/" method="POST">
-    <div class="form-group">
+<fieldset>
+    <a class="link" href="#">Ссылка</a>
+    <legend>Контатная информация</legend>
+        <div class="form-group">
         <input  class="form-input" type="text" name="name" placeholder="Ваше Имя">
     </div>
     <div class="form-group">
         <input class="form-input" type="text" name="email" placeholder="Введите ваш email">
-        </form>
-    </div>
+        </div>
+</fieldset>
+<fieldset>
+    <legend>Еще одно поле</legend>
     <div class="form-group">
         <input  class="form-input" type="password" name="Password" placeholder="Ваш пароль">
     </div>
@@ -41,9 +46,22 @@
     <div class="form-group">
         <label for="male">МУЖ</label>
         <input type="radio" name="choose_male" id="male">
-        
+
         <label for="female">ЖЕН</label>
         <input type="radio" name="choose_male" id="female">
     </div>
+<div class="form-group">
+<label for="photo">Фото</label>
+<input type="file" name="photo" id="photo">
+</div>
+</fieldset>    
+<div class="form-group">
+    <input type="checkbox" id="agree">
+    <label for="agree">Прочитал условия, согласен
+</label>
+</div>
+    <button  class="btn" type="submit">Отправить</button>
+    <button  class="btn"type="reset">Очистить</button>
+    </form>
 </body>
 </html>
