--- a/form_2.html
+++ b/form_2.html
@@ -10,18 +10,18 @@
     <div class="form">  
         <h1 class="title">Формы</h1>
         <form action="/" method="POST">
-<fieldset>
+<div class="form-fieldset">
     <a class="link" href="#">Ссылка</a>
-    <legend>Контатная информация</legend>
+    <h3 class="form-title">Контатная информация</h3>
         <div class="form-group">
         <input  class="form-input" type="text" name="name" placeholder="Ваше Имя">
     </div>
     <div class="form-group">
         <input class="form-input" type="text" name="email" placeholder="Введите ваш email">
         </div>
-</fieldset>
-<fieldset>
-    <legend>Еще одно поле</legend>
+    </div>
+<div class="form-fieldset">
+    <h3 clas="form-title">Еще одно поле</h3>
     <div class="form-group">
         <input  class="form-input" type="password" name="Password" placeholder="Ваш пароль">
     </div>
@@ -54,7 +54,7 @@
 <label for="photo">Фото</label>
 <input type="file" name="photo" id="photo">
 </div>
-</fieldset>    
+</div>    
 <div class="form-group">
     <input type="checkbox" id="agree">
     <label for="agree">Прочитал условия, согласен
