Изменил блочные элементы

--- a/css3.html
+++ b/css3.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Псевдо-элементы</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>CSS 3</title>
 </head>
 <body>
-    <h6 сlass="pseudo-title">Псевдоэлементы</h1>
+    
+<div class="element">
+<h2 class="element-title">Тени для текста</h1>
+</div>
 </body>
 </html>
